Partially replace foreach with collecton